fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,14 @@ h4{
     justify-content: center;
     text-align: center;
 }
+#project-h1-text{
+    padding-left: 40px;
+    padding-right: 40px;
+
+}
+.project-description{
+    padding-top: 20px;
+}
 .banner{
     background-color: antiquewhite;
     width:80%;
@@ -158,7 +166,7 @@ h4{
 }
 .airplane-banner.visible{
     opacity:1;
-    transform: translateY(-250px);
+    transform: translateY(0px);
 }
 #airplane.visible{
     animation: plane 1s linear 0.5s forwards;
@@ -188,7 +196,12 @@ h4{
     padding-right:50px;
     z-index: 999;
 }
-
+#experience-title{
+    padding-top: 12%;
+    padding-bottom: 7%;
+    padding-left: 40px;
+    padding-right: 40px;
+}
 section{
     position: relative;
     width: 100%;
@@ -277,6 +290,9 @@ section .wave.wave4{
 }
 #skills-header{
     margin:0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 7%;
 }
 .about{
     background-color: rgb(38, 221, 221);
@@ -285,6 +301,7 @@ section .wave.wave4{
     padding-left: 10%;
     padding-right:10%;
     text-align: left;
+    padding-bottom: 5%;
 }
 .connect
 {
@@ -332,9 +349,15 @@ section .wave.wave4{
     gap: 20px;
     justify-content: center;
 }
+#connect-text{
+    padding-bottom: 7%;
+}
 #linkedin-logo
 {
     transform: translateY(-6px);
+}
+#sand1{
+    transform:translateX(20px);
 }
 @media(max-width:1300px)
 {
